Fix li spacing

--- a/app/blog/[id]/page.module.css
+++ b/app/blog/[id]/page.module.css
@@ -87,7 +87,8 @@
 }
 
 .blogPostContent ul > li {
-  margin-bottom: 0.5rem;
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
 }
 
 .blogPostContent blockquote {
